--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
     "short_name": "Panel",
     "name": "Panel",
     "start_url": "index.html",
-    "background_color": "#5a5c69",
+    "background_color": "#2d2d2d",
     "display": "standalone",
-    "theme_color": "#5a5c69",
+    "theme_color": "#2d2d2d",
     "orientation": "portrait",
     "icons": [{
             "src": "views/img/icons/icon-72x72.png",
